// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Project.vue renders the page 1`] = `
<div class="project">
  <!---->
  <div>
    <h1>My awesome Project</h1>
  </div>
</div>
`;

exports[`pages/Project.vue shows a warning if project is not available 1`] = `
<div class="project">
  <v-alert-stub tag="div" value="true" closelabel="$vuetify.close" icon="" prominent="true" type="error">
    project.not_available
  </v-alert-stub>
  <!---->
</div>
`;
